edits to my site

--- a/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
+++ b/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
@@ -53,20 +53,18 @@ $op-black: rgba(black, 0.8);
   left: 50%;
   position: absolute;
   top: -10px;
-  
-  background-color: white;
   transform: rotate(180deg)
 }
 
 .popper {
-  padding: 10px;
+  padding: 15px;
   text-align: center;
   top: 2px;
   display: none;
   background-color: $op-black;
   color: black;
   @media (min-width: $screen-sm) {
-
+  width: 265px;
   }
   &.open {
     display: block;
@@ -110,7 +108,7 @@ $op-black: rgba(black, 0.8);
   }
   text-align: center;
   color: white;
-  font-size: 13px;
+  font-size: 14px;
 }
 
 .popover-content {
