--- a/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
+++ b/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
@@ -1,6 +1,8 @@
 @import '../../../../shared/shared.scss';
+@import '../../main-nav/main-nav.scss';
 
 $op-black: rgba(black, 0.8);
+$arrow-height: 10px;
 
 .my-site,
 .my-site-name {
@@ -44,28 +46,25 @@ $op-black: rgba(black, 0.8);
   }
 }
 
-
-.popper > ::before {
-  border: 10px solid transparent;
-  border-bottom: 0;
-  border-top-color: $op-black;
-  content: "";
-  left: 45%;
-  position: absolute;
-  top: -10px;
-  transform: rotate(180deg)
-}
-
 .popper {
-  padding: 20px;
-  text-align: center;
-  top: 2px;
   display: none;
-  background-color: $op-black;
-  color: black;
-  @media (min-width: $screen-sm) {
-  width: 300px;
+  padding: 20px;
+
+  @media (max-width: $screen-sm - 1) {
+    top: $top-padding !important;
+    background-color: $op-black;
+    position: fixed !important;
+    right: 0 !important;
+    left: 0 !important;
+    color: black;
+    height: -webkit-fill-available;
+    transform: none !important;
   }
+
+  @media (min-width: $screen-sm) {
+    width: 300px;
+  }
+
   &.open {
     display: block;
   }
@@ -133,17 +132,15 @@ $op-black: rgba(black, 0.8);
   margin: 5px;
 }
 
-
 .site-name-overlap {
-    background-color: rgb(0, 0, 0, 0.7);
-    display: table;
-    font-family: "acumin-pro-extra-condensed",sans-serif;
-    font-size: 2.125rem;
-    margin: -3rem -0.5rem 0;
-    padding: 0.25rem 0.5rem;
-    position: relative;
-    color: white;
-    
+  background-color: rgb(0, 0, 0, 0.7);
+  display: table;
+  font-family: 'acumin-pro-extra-condensed', sans-serif;
+  font-size: 2.125rem;
+  margin: -3rem -0.5rem 0;
+  padding: 0.25rem 0.5rem;
+  position: relative;
+  color: white;
 }
 
 /* Add back in for 2nd design iteration (w/ SVG Masking)
