--- a/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
+++ b/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
@@ -58,7 +58,7 @@ $arrow-height: 10px;
     right: 0 !important;
     left: 0 !important;
     color: black;
-    height: -webkit-fill-available;
+    height: calc(100% - 50px);
     transform: none !important;
   }
 
@@ -72,33 +72,41 @@ $arrow-height: 10px;
 }
 
 .close {
-  $size: 25px;
+  $padding: 22px;
+  bottom: 0;
+  display: none;
+  height: $close-container-height;
+  padding-left: 2px;
+  position: fixed;
+  width: 100%;
+  z-index: 3;
 
-  appearance: none;
-  background-color: rgba(187, 187, 187, 0.6);
-  border-image: none;
-  border-radius: 50%;
-  border-style: none;
-  color: #fff;
-  cursor: pointer;
-  height: $size;
-  position: absolute;
-  right: 15px;
-  top: 15px;
-  width: $size;
-
-  &:after {
-    @include font-family-base;
-
-    bottom: 3px;
-    content: 'x';
-    display: inline-block;
-    font-size: 16px;
-    position: relative;
+  @media (max-width: $screen-sm - 1) {
+    display: block;
   }
 
-  &:focus {
-    outline: none;
+  &-icon {
+    $circle-size: 64px;
+
+    background-color: $cr-cyan;
+    border-radius: 50%;
+    bottom: $padding;
+    box-shadow: 0 5px 24px -5px rgba(0, 0, 0, 0.75);
+    cursor: pointer;
+    height: $circle-size;
+    position: absolute;
+    width: $circle-size;
+  }
+
+  svg {
+    $size: 30px;
+    fill: $cr-white;
+    height: $size;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: $size;
   }
 }
 
