my site styling

--- a/src/components/crds-shared-header/global-nav/global-nav.scss
+++ b/src/components/crds-shared-header/global-nav/global-nav.scss
@@ -150,6 +150,7 @@ $has-close-button: (
   menu-container: menu,
   profile-container: account,
   give-container: donate,
+  my-site-container: mySite /*added to get X icon working for My Site*/
 );
 
 @each $container, $icon in $has-close-button {
