--- a/src/components/crds-shared-header/profile-nav/profile-nav.scss
+++ b/src/components/crds-shared-header/profile-nav/profile-nav.scss
@@ -15,7 +15,7 @@
   width: 100vw;
   z-index: 2;
 
-  @media (min-width: $screen-md) {
+  @media (min-width: $screen-sm) {
     height: auto;
     left: auto;
     margin-right: -$global-nav-padding;
@@ -69,7 +69,7 @@
     z-index: -2;
   }
 
-  @media (min-width: $screen-md) {
+  @media (min-width: $screen-sm) {
     div {
       padding-bottom: 0;
     }
