add override class to reduce H3 size for mobile

--- a/src/components/crds-greeting/crds-greeting.scss
+++ b/src/components/crds-greeting/crds-greeting.scss
@@ -31,3 +31,9 @@
 .evening-color {
   color: #426282
 }
+
+@media screen and (max-width: 414px){
+.mobile-header {
+  font-size: 1.6rem !important;
+  }
+}
