adjust icon padding and hiding my site icon at 374px and under

--- a/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
+++ b/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
@@ -31,6 +31,10 @@ $arrow-height: 10px;
   }
 
   border: none;
+
+  @media screen and (max-width: 374px){
+    display: none;
+  }
 }
 
 .my-site-name {
