target :host instead of .my-site for hiding icon

--- a/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
+++ b/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
@@ -4,6 +4,13 @@
 $op-black: rgba(black, 0.8);
 $arrow-height: 10px;
 
+@media screen and (max-width: 374px){
+  :host {
+  display: none;
+  }
+}
+
+
 .my-site,
 .my-site-name {
   @media (hover) {
@@ -32,9 +39,6 @@ $arrow-height: 10px;
 
   border: none;
 
-  @media screen and (max-width: 374px){
-    display: none;
-  }
 }
 
 .my-site-name {
