--- a/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
+++ b/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
@@ -153,8 +153,6 @@ $arrow-height: 10px;
   height: auto;
   width: 100%;
   display: block;
-  // -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 57% 100%, 57% 80%, 9% 80%, 9% 100%, 0 100%);
-  // clip-path: polygon(0 0, 100% 0, 100% 100%, 57% 100%, 57% 80%, 9% 80%, 9% 100%, 0 100%);
 }
 
 
@@ -171,7 +169,7 @@ $arrow-height: 10px;
   font-family: 'acumin-pro-extra-condensed', sans-serif;
   font-size: 2.125rem;
   margin: -3rem -0.7rem 0;
-  padding: 0rem 0.75rem;
+  padding: 0px 10px;
   position: relative;
   color: white;
 }
