--- a/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
+++ b/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
@@ -80,6 +80,8 @@ $arrow-height: 10px;
     color: black;
     height: calc(100% - 50px);
     transform: none !important;
+    // padding-bottom: 125px;
+    overflow: scroll;
   }
 
   @media (min-width: $screen-sm) {
@@ -103,6 +105,7 @@ $arrow-height: 10px;
 
   @media (max-width: $screen-sm - 1) {
     display: block;
+    position: sticky;
   }
 
   &-icon {
