--- a/src/components/crds-tithe-challenge/crds-tithe-challenge.scss
+++ b/src/components/crds-tithe-challenge/crds-tithe-challenge.scss
@@ -2,6 +2,10 @@
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins/gradients";
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins/progress-bar";
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/progress-bars";
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins/nav-divider";
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins/reset-filter";
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
+@import "../../shared/shared.scss";
 
 .progress {
   box-shadow: none;
@@ -10,4 +14,82 @@
 
 .progress-bar {
   box-shadow: none;
+}
+
+
+.tithe-container {
+  height: auto;
+  flex-wrap: wrap;
+  background-color: #274254;
+  @media screen and (min-width: $screen-sm) {
+      height: 400px;
+  }
+}
+.divider {
+  border: 1px solid $cr-gray-light;
+  margin: auto;
+  width: 85%;
+  @media screen and (min-width: $screen-sm) {
+      height: 75%;
+      width: auto;
+      margin: auto 0;
+  }
+}
+.m-auto {
+  margin: auto;
+}
+
+.m-ends-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.text-container {
+  margin: auto;
+  text-align: center;
+  padding: 2.5rem 3rem;
+  width: 100%;
+  @media (min-width: $screen-sm) {
+      width: 55%;
+      text-align: left;
+      padding: 2.5rem 0;
+  }
+}
+.schedule-btn {
+  padding: 13px 30px;
+  @media screen and (min-width: 516px) {
+      margin-right: 12px;
+  }
+}
+.tithe-logo {
+  max-width: 75%;
+  text-align: center;
+  padding: 2.5rem 0;
+  @media screen and (min-width: $screen-sm) {
+      max-width: 100%;
+  }
+}
+progress {
+  -webkit-appearance: none;
+  width: 600px;
+  background-image: linear-gradient(red 0%, orange 10%, orange 30%, yellow 50%, yellow 70%, green 90%, green 100%)
+}
+.meter {
+   height: 20px;  /* Can be anything */
+   width: 500px;
+   position: relative;
+   background: #555;
+   box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+}
+.meter > span {
+  width: 50%;
+  display: block;
+  height: 100%;
+  background-color: rgb(43,194,83);
+  background-image: linear-gradient(to right, red 0%, orange 10%, orange 30%, yellow 50%, yellow 70%, green 90%, green 100%);
+  box-shadow:
+    inset 0 2px 9px  rgba(255,255,255,0.3),
+    inset 0 -2px 6px rgba(0,0,0,0.4);
+  position: absolute;
+  overflow: hidden;
 }
