--- a/src/shared/shared.scss
+++ b/src/shared/shared.scss
@@ -152,6 +152,10 @@ hr {
   margin-bottom: 12px !important;
 }
 
+.push-half-top {
+  margin-top: 12px !important;
+}
+
 .push-bottom {
   margin-bottom: 24px !important;
 }
@@ -166,6 +170,10 @@ hr {
 
 .push-half-left {
   margin-left: 12px !important;
+}
+
+.push-half-right {
+  margin-right: 12px !important;
 }
 
 .push-half-top {
@@ -196,6 +204,7 @@ hr {
     font-size: 2.125rem; // 34px
   }
 }
+
 
 .list-header {
   font-family: 'acumin-pro-extra-condensed', sans-serif;
@@ -275,6 +284,12 @@ hr {
     border-color: #979797;
   }
 
+  &.btn-white {
+    color: #fff;
+    background-color: #fff;
+    border-color: #fff;
+  }
+
   &.btn.btn-blue,
   &.btn.btn-primary {
     color: #fff;
@@ -295,6 +310,18 @@ hr {
 
     &:hover {
       background-color: #979797;
+      color: #fff;
+    }
+  }
+
+  &.btn-white.btn-outline {
+    background: transparent;
+    border-style: solid;
+    border-width: 1px;
+    color: #fff;
+
+    &:hover {
+      background-color: transparent;
       color: #fff;
     }
   }
