--- a/src/components/crds-tithe-challenge/crds-tithe-challenge.scss
+++ b/src/components/crds-tithe-challenge/crds-tithe-challenge.scss
@@ -69,14 +69,10 @@
       max-width: 100%;
   }
 }
-progress {
-  -webkit-appearance: none;
-  width: 600px;
-  background-image: linear-gradient(red 0%, orange 10%, orange 30%, yellow 50%, yellow 70%, green 90%, green 100%)
-}
+
 .meter {
    height: 20px;  /* Can be anything */
-   width: 500px;
+   width: auto;
    position: relative;
    background: #555;
    box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
@@ -85,8 +81,8 @@ progress {
   width: 50%;
   display: block;
   height: 100%;
-  background-color: rgb(43,194,83);
-  background-image: linear-gradient(to right, red 0%, orange 10%, orange 30%, yellow 50%, yellow 70%, green 90%, green 100%);
+  background-color: #fff;
+  
   box-shadow:
     inset 0 2px 9px  rgba(255,255,255,0.3),
     inset 0 -2px 6px rgba(0,0,0,0.4);
