--- a/src/components/crds-tithe-challenge/crds-tithe-challenge.scss
+++ b/src/components/crds-tithe-challenge/crds-tithe-challenge.scss
@@ -14,6 +14,7 @@
 
 .progress-bar {
   box-shadow: none;
+  
 }
 
 
@@ -37,6 +38,10 @@
 }
 .m-auto {
   margin: auto;
+}
+
+.ml-auto {
+  margin-left: auto;
 }
 
 .m-ends-auto {
@@ -71,21 +76,17 @@
 }
 
 .meter {
-   height: 20px;  /* Can be anything */
+   height: 9px;  /* Can be anything */
    width: auto;
    position: relative;
-   background: #555;
-   box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+   background: linear-gradient(270deg, #FFFFFF 0%,#E09E06 15%,  #C05C04 35% ,  #57AFA9 55%, #0095D9 75%, #FFFFFF 100%);
+   transform: rotate(180deg);
 }
 .meter > span {
   width: 50%;
   display: block;
   height: 100%;
-  background-color: #fff;
-  
-  box-shadow:
-    inset 0 2px 9px  rgba(255,255,255,0.3),
-    inset 0 -2px 6px rgba(0,0,0,0.4);
+  background-color: #1B303D;
   position: absolute;
   overflow: hidden;
 }
@@ -93,4 +94,8 @@
 a,
 a label {
     cursor: pointer;
+}
+
+.finished {
+  color: #1B303D;
 }
