--- a/src/components/crds-tithe-challenge/crds-tithe-challenge.scss
+++ b/src/components/crds-tithe-challenge/crds-tithe-challenge.scss
@@ -7,7 +7,7 @@
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
 @import "../../shared/shared.scss";
 
-:host {
+.tithe-challenge {
   margin-bottom: 32px;
 }
 
