adding site link to name

--- a/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
+++ b/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
@@ -175,6 +175,7 @@ $arrow-height: 10px;
   padding: 0px 10px;
   position: relative;
   color: white;
+  text-decoration: none;
 }
 
 /* Add back in after svg mask is in place
