--- a/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
+++ b/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
@@ -178,7 +178,7 @@ $arrow-height: 10px;
   text-decoration: none;
 }
 
-/* Add back in after svg mask is in place
+
 .site-name-overlap:after {
   color: #979797;
   content: '\2014';
@@ -186,9 +186,11 @@ $arrow-height: 10px;
   font-family: 'acumin-pro', helvetica, arial, sans-serif;
   font-size: 1.25rem;
   font-weight: 100;
-  line-height: 1.5;
+  line-height: 0;
   text-align: left;
-}*/
+  margin-bottom: 12px;
+  margin-left: -10px;
+}
 
 .card-block {
   padding: 1rem;
@@ -207,4 +209,7 @@ $arrow-height: 10px;
   top: $top-padding - $arrow-height;
 }
 
-
+// .anywhere-connect{
+//   text-decoration: none;
+//   color: white;
+// }
