more popova changes

--- a/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
+++ b/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
@@ -209,7 +209,7 @@ $arrow-height: 10px;
   top: $top-padding - $arrow-height;
 }
 
-// .anywhere-connect{
-//   text-decoration: none;
-//   color: white;
-// }
+.anywhere-connect > a {
+  text-decoration: none;
+  color: white;
+}
