--- a/src/shared/shared.scss
+++ b/src/shared/shared.scss
@@ -65,6 +65,11 @@ hr {
   font-weight: 300 !important;
 }
 
+.font-family-base-bold {
+  font-family: "acumin-pro", helvetica, arial, sans-serif !important;
+  font-weight: 600 !important;
+}
+
 .font-family-condensed-extra {
   font-family: 'acumin-pro-extra-condensed', sans-serif !important;
   font-weight: 500 !important;
