iteration on anywhere; AGs feedback

--- a/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
+++ b/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
@@ -38,6 +38,10 @@ $arrow-height: 10px;
     height: 22px;
     width: 22px;
     vertical-align: text-bottom;
+
+    & > g{
+      transform: translateX(72px);
+    }
   }
 
   &.open {
