db4df54b2d73ef3b18c6266e84112070d4133084

--- a/src/components/crds-tithe-challenge/crds-tithe-challenge.scss
+++ b/src/components/crds-tithe-challenge/crds-tithe-challenge.scss
@@ -172,3 +172,22 @@ a label {
     margin: 0;
   }
 }
+
+.user-img-container {
+  text-align: left;
+  transform: translateY(-22px);
+}
+
+.user-img {
+  background-color: #eee;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  border: 2px solid white;
+  margin-left: auto;
+  transform: rotate(180deg) translateX(-1px);
+}
+
+.progress-container {
+  margin-top: 50px;
+}
