--- a/src/components/crds-tithe-challenge/crds-tithe-challenge.scss
+++ b/src/components/crds-tithe-challenge/crds-tithe-challenge.scss
@@ -79,7 +79,7 @@
    height: 9px;  /* Can be anything */
    width: auto;
    position: relative;
-   background: linear-gradient(270deg, #FFFFFF 0%,#E09E06 15%,  #C05C04 35% ,  #57AFA9 55%, #0095D9 75%, #FFFFFF 100%);
+   background: linear-gradient(270deg, #bf9f56 0%,#E09E06 10%,  #C05C04 28% ,  #57AFA9 55%, #0095D9 75%, #FFFFFF 100%);
    transform: rotate(180deg);
 }
 .meter > span {
