--- a/src/components/crds-tithe-challenge/crds-tithe-challenge.scss
+++ b/src/components/crds-tithe-challenge/crds-tithe-challenge.scss
@@ -127,12 +127,9 @@
   }
 }
 .tithe-logo {
-  max-width: 75%;
+  height: 230px;
   text-align: center;
   padding: 2.5rem 0;
-  @media screen and (min-width: $screen-sm) {
-      max-width: 100%;
-  }
 }
 
 .meter {
