--- a/src/components/crds-media-card/layouts/crds-default-card/crds-default-card.scss
+++ b/src/components/crds-media-card/layouts/crds-default-card/crds-default-card.scss
@@ -16,15 +16,15 @@
 .card-stamp-container {
   box-sizing: border-box;
   background-color: rgba(23, 23, 23, 0.9);
-  top: 1rem;
-  padding: 0.5rem;
+  bottom: 0.25rem;
+  padding: 0.5rem 0.25rem;
   position: absolute;
-  left: 1rem;
+  right: 0.25rem;
   display: flex;
   max-height: 28px;
 
   .card-stamp {
-    margin-left: 0.25rem;
+    margin: 0 0.5rem 0 0.25rem;
   }
 }
 
