feature/US17970-media-card - Adds MediaLabel - Adds category - Card scale to container - Card hover animation

--- a/src/components/crds-image/crds-image.scss
+++ b/src/components/crds-image/crds-image.scss
@@ -5,16 +5,10 @@
   position: relative;
   overflow: hidden;
 
-  &.card {
-    height: 202px;
-  }
-
-  &.thumbnail {
-    height: 65px;
-  }
-
   .crds-img {
-    height: 100%;
+    width: 100%;
+    height: auto;
+    display: block;
   }
   .crds-img.loaded {
     animation-name: fade-in;
