US18392 Video Embed Style video component

--- a/src/components/crds-video/crds-video.scss
+++ b/src/components/crds-video/crds-video.scss
@@ -1,5 +1,48 @@
 .transcript-body {
+  background-color: rgba(150, 150, 150, .05);
+  border: 1px solid rgba(150, 150, 150, .5);
+  font-size: 16px;
+  line-height: 24px;
   max-height: 0;
+  opacity: 0;
+  overflow: scroll;
+  padding: 0 15px;
+  transition: all .5s ease-in-out;
+
+  &.show {
+    max-height: 250px;
+    opacity: 1;
+  }
+}
+
+.transcript-btn {
+  border: none;
+  color: #919191;
+  margin: 15px 0;
+}
+
+.embed-responsive {
+  display: block;
+  margin: 0 auto;
   overflow: hidden;
-  transition: max-height 0.2s ease-out;
+  padding: 0;
+  position: relative;
+  width: 100%;
+
+  &::before {
+    content: '';
+    display: block;
+    padding-top: 56.25%;
+  }
+}
+
+.embed-responsive-item {
+  border: 0;
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  margin-bottom: 10px;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
