DE7293 | Christian | keep notification icon visible until popper closed

--- a/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
+++ b/src/components/crds-shared-header/profile-nav/my-site/my-site.scss
@@ -167,7 +167,7 @@ div.social-icons a {
 
 
 .notification {
-  svg {
+  svg.notification-red {
     position: absolute;
     width: 15px;
     -webkit-transform: translate(30px, 10px);
