fixing links and buttons

--- a/src/components/DDK/buttons/crds-button.scss
+++ b/src/components/DDK/buttons/crds-button.scss
@@ -35,6 +35,10 @@ button {
   background-color: $cr-cyan !important;
 }
 
+a {
+  text-decoration: none;
+}
+
 .btn {
   border-radius: $border-radius-base;
   line-height: 1;
